examples/good/16-01-break-continue.elina
fn main(): void {
  var x: int = 5;
  while (x >= 0) {
    while (true) {
      break;
    }
    if (x == 2) {
      break;
    }
    x--;
  }
  printInt(x);
}