examples/bad/static-binding.elina
fn f(): int {
  return x;
}

var x: int = 5;

fn main(): void {
}